ingress/nagp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nagp-ingress
  namespace: nagp-ns
  annotations: {}
spec:
  ingressClassName: nginx
  rules:
  - host: nagp-demo.example.com
    http:
      paths:
      - path: /v1/user-service
        pathType: Prefix
        backend:
          service:
            name: user-app-service
            port:
              number: 8090
